# mirror-rorrim

./: .gitignore  .mirror.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: lint.yaml  readme-check.yaml  release.yaml  test.yaml
mirror/: __main__.py  checker.py  checker_test.py  config.py  config_parser_test.py  conftest.py  constants.py  constants_test.py  diff.py  diff_test.py  file.py  file_test.py  githelper.py  githelper_test.py  installer.py  installer_test.py  lock_test.py  logger.py  logger_test.py  main.py  main_test.py  manager.py  mirror.py  mirror_test.py  repo.py  repo_test.py  state.py  state_test.py  syncer.py  syncer_test.py  test_utils.py  typed_path_test.py  utils.py  utils_test.py
src/: __init__.py  __main__.py  checker.py  checker_test.py  config.py  config_parser.py  config_parser_test.py  conftest.py  constants.py  diff.py  diff_test.py  file.py  file_test.py  githelper.py  githelper_test.py  installer.py  installer_test.py  lock.py  lock_test.py  logger.py  logger_test.py  main.py  main_test.py  manager.py  mirror.py  mirror_test.py  repo.py  repo_test.py  state.py  state_test.py  syncer_test.py  test_utils.py  typed_path.py  typed_path_test.py  types.py  utils.py  utils_test.py
test_data/config_tests/: complex_state.config.yaml  complex_state.state.yaml  content_error.yaml  single.config.yaml  syntax_error.yaml  trivial_state.config.yaml
test_data/pre_commit_tests/: .pre-commit-config.yaml
(+93 files in other folders)
